# customer_support

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
support_assistant_backend/: alembic.ini  dependencies.py  main.py
support_assistant_backend/alembic/: env.py
support_assistant_backend/core/: config.py
support_assistant_backend/db/: base_class.py  session.py
support_assistant_backend/models/: message.py  ticket.py  users.py
support_assistant_backend/routes/: ai_route.py  auth_route.py  ticket_route.py
support_assistant_backend/schemas/: message.py  ticket.py  users.py
support_assistant_backend/services/: ai_service.py  auth_service.py  message_service.py  ticket_service.py
support_assistant_backend/utils/: security.py
tests/: test_apiTest.py
